update code the first time

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/controller/ktdn.java=UTF-8
+encoding//src/controller/suadongho.java=UTF-8
+encoding//src/controller/themdongho.java=UTF-8
